@@ -133,5 +133,77 @@ namespace Qyoto {
 				return new QVariant();
 			}
 		}
+		public static implicit operator QVariant(int arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(uint arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(long arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(ulong arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(bool arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(double arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(string arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QByteArray arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QColor arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QCursor arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QFont arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QIcon arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QImage arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QKeySequence arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QMatrix arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QPalette arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QPen arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QPixmap arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QPolygon arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QRegion arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QSizePolicy arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QTextFormat arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QTextLength arg) {
+			return new QVariant(arg);
+		}
+		public static implicit operator QVariant(QTransform arg) {
+			return new QVariant(arg);
+		}
 	}
 }
