@@ -1,6 +1,7 @@
 2007-04-14  Richard Dale  <rdale@foton.es>
 	
 	* Fixed some compiler warnings
+	* Added implicit operator conversions for various types to QVariants
 
 2007-04-13  Arno Rehn  <arno@arnorehn.de>
 
